[package]
name = "ydlidar_driver"
version = "0.1.0"
authors = ["Takeshi Ishita <ishitah.takeshi@gmail.com>"]
edition = "2021"
license = "MIT"
description = "YDLiDAR Driver in Rust"
repository = "https://github.com/tier4/ydlidar_driver"
homepage = "https://tier4.jp/"
keywords = ["LiDAR", "Driver", "Localization", "Perception"]
categories = ["lidar", "localization"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8.16"

[dev-dependencies]
clap = { version = "3.1.6", features = ["derive"] }
piston_window = "0.120.0"

[dev-dependencies.plotters-piston]
git = "https://github.com/plotters-rs/plotters-piston"

[dev-dependencies.plotters]
default_features = false
features = ["ttf", "all_series"]
git = "https://github.com/plotters-rs/plotters"
